# analytics

./: .gitmodules  HyperMake  README.md
common/cpp/: CMakeLists.txt  common.hmake
common/cpp/inc/cmn/: app.h  common.h  mqtt.h  perflog.h  pubsub.h
common/cpp/src/: app.cpp  mqtt.cpp  pubsub.cpp
vision/: CMakeLists.txt  vision.hmake
vision/inc/vision/: app.h  detect.h  pipeline.h  vision.h
vision/inc/vision/detect/: face.h  motion.h  track.h
vision/src/: analyzer.h  cap.cpp  detection.cpp  face_detector.cpp  face_detector.h  pipeline.cpp  vision.cpp
vision/src/detect/: face.cpp  motion_simple.cpp  track.cpp
vision/src/perf/: analyzer.cpp  analyzer.h  detection.cpp  detection.h  perf.cpp
vision/src/vision/: app.cpp  capture_cv.cpp  capture_udp.cpp  model.cpp  pipeline.cpp
vp/: CMakeLists.txt  vp.hmake
vp/inc/vp/: graph.h  operators.h
vp/inc/vp/mqtt/: mqtt.h
vp/src/movidius/: ncs.cpp
vp/src/vp/: graph_var.cpp
vp/src/vp/mqtt/: mqtt.cpp
vp/src/vp/op/: detection.cpp  image.cpp
vp/src/vpd/: app.cpp
